# BAE

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Doxyfile  LICENSE  README.md
book/: book.toml
book/book/: 01.html  index.html  print.html  searchindex.js  searchindex.json
book/src/: SUMMARY.md
inc/FixedPoint/: FixedPoint.hpp  FixedPoint.inl
inc/OCAE/: Core.hpp  Engine.hpp  Macro.hpp  Modifiers.hpp  Sounds.hpp  Tools.hpp  Types.hpp  Util.hpp
inc/OCAE/Core/: Driver.hpp
inc/OCAE/Generators/: GeneratorBase.hpp  GeneratorFactory.hpp  Noise.hpp  Sawtooth.hpp  Sine.hpp  Square.hpp  Triangle.hpp  WAV.hpp
inc/OCAE/Modifiers/: ADSR.hpp  BandPass.hpp  Delay.hpp  Echo.hpp  Envelope.hpp  Equalizer.hpp  Gain.hpp  GenericFilter.hpp  LowPass.hpp  ModifierBase.hpp  ModifierFactory.hpp
inc/OCAE/Sounds/: Block.hpp  Combinator.hpp  Sound.hpp  SoundFactory.hpp
inc/OCAE/Tools/: Input.hpp  MethodTable.hpp  Resampler.hpp  WAVHeader.hpp  WAVWriter.hpp
inc/RIFF-Util/: RIFF.hpp
lib/linux/: libportaudio.so.2
lib/win/: RIFF.lib  RIFF_d.lib  portaudio_x64.exp
src/: Engine.hpp  Macro.hpp  Types.hpp  debug.rs  driver.rs  lib.rs  main.cpp  stereodata.rs  stub.cpp  stub.hpp
src.old/: stub.cpp  stub.hpp
src.old/Engine/Generators/: GeneratorFactory.cpp  Noise.cpp  Square.cpp  Square.hpp
src.old/Engine/Modifiers/: BandPass.cpp  BandPass.hpp  Envelope.cpp  LowPass.cpp  LowPass.hpp  ModifierFactory.cpp
src.old/Engine/Sounds/: Sound.cpp  SoundFactory.cpp  SoundFactory.hpp
src.old/Engine/Tools/: Resampler.cpp
src.old/Generators/: GeneratorBase.hpp  Triangle.cpp
src.old/Modifiers/: GenericFilter.cpp
src.old/Sounds/: Block.cpp  Block.hpp
src.old/Tools/: WAVHeader.cpp
src/Core/: Driver.cpp  Driver.hpp
src/Engine/: CMakeLists.txt  Core.hpp  Engine.hpp  Generators.hpp  Macro.hpp  Modifiers.hpp  Sounds.hpp  Tools.hpp  Types.hpp  Util.hpp
src/Engine/Core/: Block.cpp  Block.hpp  Driver.cpp  Driver.hpp  Node.cpp  Node.hpp  Recorder.hpp  Sound.cpp  Sound.hpp
src/Engine/Generators/: Base.hpp  GeneratorBase.hpp  GeneratorFactory.cpp  GeneratorFactory.hpp  Noise.cpp  Noise.hpp  Sawtooth.cpp  Sawtooth.hpp  Sine.cpp  Sine.hpp  Square.cpp  Square.hpp  Triangle.cpp  Triangle.hpp  WAV.cpp  WAV.hpp
src/Engine/Modifiers/: ADSR.cpp  ADSR.hpp  BandPass.cpp  BandPass.hpp  Base.hpp  Delay.cpp  Delay.hpp  Echo.cpp  Echo.hpp  Envelope.cpp  Envelope.hpp  Equalizer.cpp  Equalizer.hpp  Gain.cpp  Gain.hpp  GenericFilter.cpp  GenericFilter.hpp  LowPass.cpp  LowPass.hpp  ModifierBase.hpp  ModifierFactory.cpp  ModifierFactory.hpp  Vocoder.cpp  Vocoder.hpp
src/Engine/Sounds/: Base.hpp  Block.cpp  Block.hpp  Combinator.cpp  Combinator.hpp  Sound.cpp  Sound.hpp  SoundFactory.cpp  SoundFactory.hpp  Vocoder.cpp  Vocoder.hpp
src/Engine/Tools/: Input.cpp  Input.hpp  MethodTable.cpp  MethodTable.hpp  Resampler.cpp  Resampler.hpp  Util.cpp  Util.hpp  WAVHeader.cpp  WAVHeader.hpp  WAVWriter.cpp  WAVWriter.hpp
src/Generators/: Sine.cpp  Sine.hpp  Square.cpp  Square.hpp  WAV.cpp  WAV.hpp
src/Modifiers/: BandPass.cpp  BandPass.hpp  GenericFilter.cpp  GenericFilter.hpp  LowPass.cpp  LowPass.hpp
src/Tests/: CMakeLists.txt  main.cpp
src/Tools/: Input.cpp  Input.hpp  Resampler.cpp  Resampler.hpp
src/Trace/: Trace.cpp  Trace.hpp
src/channels/: mod.rs  standard_channel.rs
src/core/: complex_channel.rs  complex_driver.rs  mod.rs  simple_channel.rs  standard_channel.rs
src/generator/: mod.rs  noise.rs  sine.rs
src/generators/: empty.rs  mod.rs  mono_wav.rs  noise.rs  sawtooth.rs  sine.rs  square.rs  triangle.rs  wav.rs  wavplayer.rs  zero.rs
src/modifiers/: adsr.rs  bandpass.rs  delay.rs  echo.rs  empty.rs  envelope.rs  gain.rs  generic.rs  highpass.rs  lowpass.rs  mod.rs  passthrough.rs
src/sample_format/: mod.rs  mono.rs  stereo.rs  stereodata.rs
src/sounds/: basic_block.rs  block.rs  complex_sound.rs  mod.rs  simple_sound.rs  sound.rs  standard_block.rs
src/tools/: mixer.rs  mod.rs  mono_resampler.rs  resampler.rs
src/utils/: mod.rs  mono_resampler.rs
tests/: generators.rs  modifiers.rs  new_generators.rs  sine.rs  sounds.rs  tools.rs  utils.rs
utility/bin2str/: Cargo.toml
utility/bin2str/src/: main.rs
