[package]
name = "bae_rs"
description = "The Broad Audio Engine presents the ability to process sounds and wav files for applications like video games and DAWs."
readme = "README.md"
repository = "https://github.com/ChylerDev/bae"
license = "MIT"
version = "0.13.2" # don't forget to fix version numbers in README.md documentation links
authors = ["Chyler Morrison <contact@chyler.info>"]
edition = "2018"
keywords = ["audio","audio-processing"]
categories = ["data-structures", "mathematics", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
petgraph = "0.5"
rand = "0.7"
wav = "0.3"
version-sync = "0.9"

[badges]
is-it-maintained-issue-resolution = { repository = "ChylerDev/BAE" }
is-it-maintained-open-issues = { repository = "ChylerDev/BAE" }
maintenance = { status = "actively-developed" }
gitlab = { repository = "ChylerDev/bae_copy" }
